<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="#FFFFFF">
    
   <ImageView
       android:id="@+id/imgProfilePic"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:adjustViewBounds="true"
       android:contentDescription="@string/profilePic_contentDesc"
       android:padding="5dp"
       android:scaleType="fitCenter"
       android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgProfilePic"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgPhoto_contentDesc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgProfilePic"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/imgProfilePic"
        android:textColor="#206199"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="13sp"
        android:text="@string/username_default_text" />

    <ImageView
        android:id="@+id/imgLikes"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgPhoto"
        android:contentDescription="@string/likesImg_contentDesc"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_likes" />

    <TextView
        android:id="@+id/tvLikesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgLikes"
        android:layout_below="@+id/imgPhoto"
        android:textColor="#206199"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="13sp"
        android:text="@string/likes_count" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgLikes"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingLeft="5dp"
        android:typeface="serif"
        android:textSize="13sp"
        android:paddingBottom="10dp"
        android:text="@string/caption_default_text" />

    <TextView
        android:id="@+id/tv_createDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvUsername"
        android:layout_alignBottom="@+id/tvUsername"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:typeface="serif"
        android:textSize="13sp"
        android:text="@string/createDate_default" />
 
</RelativeLayout>
